site/themes/pyconth/assets/css/custom.css
/* ... */
.flip-card__back::before,
.flip-card__bottom::after,
.flip-card__back-bottom::after {
  content: attr(data-value);
}
.flip-card__back {
  position: absolute;
  top: 0;
  height: 100%;
  left: 0%;
  pointer-events: none;
}
.flip-card__back::before {
  position: relative;
  overflow: hidden;
  z-index: -1;
}
.flip .flip-card__back::before {
  z-index: 1;
  -webkit-animation: flipTop 0.3s cubic-bezier(0.37, 0.01, 0.94, 0.35);
  animation: flipTop 0.3s cubic-bezier(0.37, 0.01, 0.94, 0.35);
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-transform-origin: center bottom;
  transform-origin: center bottom;
}
.flip .flip-card__bottom {
  -webkit-transform-origin: center top;
  transform-origin: center top;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation: flipBottom 0.6s cubic-bezier(0.15, 0.45, 0.28, 1);
  animation: flipBottom 0.6s cubic-bezier(0.15, 0.45, 0.28, 1);
}
@-webkit-keyframes flipTop {
  0% {
    -webkit-transform: rotateX(0deg);
    transform: rotateX(0deg);
    z-index: 2;
  }
  0%,
  99% {
    opacity: 1;
  }
  100% {
    -webkit-transform: rotateX(-90deg);
    transform: rotateX(-90deg);
    opacity: 0;
  }
}
@keyframes flipTop {
  0% {
    -webkit-transform: rotateX(0deg);
    transform: rotateX(0deg);
    z-index: 2;
  }
  0%,
  99% {
    opacity: 1;
  }
  100% {
    -webkit-transform: rotateX(-90deg);
    transform: rotateX(-90deg);
    opacity: 0;
  }
}
@-webkit-keyframes flipBottom {
  0%,
  50% {
    z-index: -1;
    -webkit-transform: rotateX(90deg);
    transform: rotateX(90deg);
    opacity: 0;
  }
  51% {
    opacity: 1;
  }
  100% {
    opacity: 1;
    -webkit-transform: rotateX(0deg);
    transform: rotateX(0deg);
    z-index: 5;
  }
}
@keyframes flipBottom {
  0%,
  50% {
    z-index: -1;
    -webkit-transform: rotateX(90deg);
    transform: rotateX(90deg);
    opacity: 0;
  }
  51% {
    opacity: 1;
  }
  100% {
    opacity: 1;
    -webkit-transform: rotateX(0deg);
    transform: rotateX(0deg);
    z-index: 5;
  }
}

.about-header {
  font-family: var(--font-secondary);
  font-weight: var(--font-bold);
  font-size: 0.9rem;
  text-transform: uppercase;
  margin-left: 2.5rem;
}

.about-text {
  font-family: var(--font-secondary);
}

.about-block a {
  color: var(--black);
  text-decoration: underline;
}

.bg-footer {
  /* background: radial-gradient(yellow, orange); */

  background: url('/footer-coconut-tree2.png') right bottom no-repeat, radial-gradient(yellow, orange);
  position: relative;
}

.about-wrapper {
  flex-direction: column;
}
@media (min-width: 992px) {
  .about-wrapper {
    flex-direction: row;
  }
}
.about-inline-img {
  width: 70px;
  height: 70px;
  margin-right: 1rem;
}

.about-header {
  margin-bottom: 0.5rem;
}

.about-text a {
  color: var(--black);
  text-decoration: underline;
}

.about-block {
  margin-bottom: 3rem;
}

.about-second-block {
  padding-left: 0;
}
@media (min-width: 992px) {
  .about-second-block {
    padding-left: 2rem;
  }
}
.about-coconut {
  min-height: 279px;
  position: relative;
}

.coconut {
  position: absolute;
  /* width: 70px;
  height: 70px; */
}

.coconut-facebook {
  right: 191px;
  bottom: 100px;
}

.coconut-twitter {
  bottom: 0;
  right: 127px;
}

.coconut-meetup {
  bottom: 71px;
  right: -16px;
}

.coconut-email {
  right: 64px;
  bottom: 161px;
}

a {
  color: var(--red);
  text-decoration: underline;
}

.e-content a {
  color: var(--red);
  text-decoration: underline;
}

.e-content ol, .e-content ul {
    list-style: disc outside none;
     padding-left: 40px;
}

/* undo stupid non specific classnames */
.e-content .contents .first {

}

a:hover {
  color: var(--red-darker);
}

.docutils {
  display: flex;
  flex-direction: column;
  align-items: center;
}

hr {
  border-top: 2px solid rgba(0, 0, 0, 0.2);
}

p {
  margin-bottom: 1rem !important;
}

.sponsors-section {
  text-align: center;
  width: 100%;
  margin-bottom: 3rem;
  margin-top: 2rem;
}

.sponsors-cards {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
}

.sponsors-card {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
}

.sponsors-card img {
  margin-left: auto;
  margin-right: auto;
}

.sponsors-link {
  margin-bottom: 1rem;
  background: var(--white);
  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
  padding: 1rem;
  border-radius: 0.5rem;
}

.sponsors-link--platinum {
  width: 300px;
  height: 300px;
}

.sponsors-link--gold {
  width: 250px;
  height:250px;
}

.sponsors-link--silver {
  width: 200px;
  height: 200px;
}

.sponsors-link--individual {
  width: 150px;
  height: 150px;
}

.sponsors-link--partner {
  width: 150px;
  height: 150px;
}

.sponsors-link--platinum,
.sponsors-link--gold,
.sponsors-link--silver,
.sponsors-link--individual,
.sponsors-link--partner {
  display: flex;
  align-items: center;
  justify-content: center;
}

.sponsors-section > .sponsors-subhead {
  color: var(--grey-light);
  text-transform: uppercase;
  font-weight: bolder;
  font-size: 1rem;
  letter-spacing: 1px;
  margin-bottom: 2rem;
  font-style: normal;
}

.sponsors-section > .sponsors-subhead--black {
  color: var(--black);
}

.sponsors-card-wrap {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: column;
}

.sponsors-card-wrap__left {
  display: flex;
  justify-content: center;
  align-items: center;
}

.sponsors-card-wrap__right {
  margin: 2rem;
  text-align: left;
}

@media (min-width: 700px) {
  .sponsors-card-wrap {
    flex-direction: row;
  }
  .sponsors-card-wrap__left {
    width: 33.33%;
  }
  .sponsors-card-wrap__right {
    width: 66.67%;
  }
}

.schedule-row {
  display: flex;
  margin-bottom: 1rem;
}
.circle {
  height: 36px;
  width: 36px;
  border: 8px solid #a9173f;
  opacity: 0.75;
  border-radius: 100%;
}
/* ... */

